tests/NormalTests/paczka1/fuzzy1/68687500.err
Error in line 7: 0hg0 S859 27,7
Error in line 8: 0hg0 A976 67,9
Error in line 11: 0hg0 S859 41,4
Error in line 21: Cknd2na3 S859 -2,8
Error in line 22: 0hg0 A976 49,6
Error in line 20: S311 A976 29,5
Error in line 28: S311 S311 68,17
Error in line 26: S311 A449 36,3
Error in line 31: S311 S311 59,3
